name:                fp
version:             0.1.0.0
synopsis:            John Backus's FP Interpreter
description:         Please see README.md
homepage:            http://github.com/kseo/fp#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo <kwangyul.seo@gmail.com>
maintainer:          Kwang Yul Seo <kwangyul.seo@gmail.com>
copyright:           Kwang Yul Seo 2016
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FP
                       FP.AST
                       FP.Env
                       FP.Function
                       FP.Interpreter
                       FP.Parser
                       FP.Value
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 0.6
                     , mtl >= 2.2.1 && < 2.3
                     , parsec >= 3.1 && < 3.2
  default-language:    Haskell2010

executable fp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fp
                     , optparse-applicative
                     , mtl
  default-language:    Haskell2010

test-suite fp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/fp
